syntax="proto3";

package com.chatnow.core.domain.protobuf.push;

message PushToGroupUserMsg{
    sint32 type=1;
    string groupName=2;
    string content=3;
    string senderName=4;
}


message PushToGroupUserMsgResp{
    sint32 type=1;
    sint32 resultCode=2;
}
